Refactored all paths from 0 to last node